--- a/charts-demo/app/src/main/res/values/attrs.xml
+++ b/charts-demo/app/src/main/res/values/attrs.xml
@@ -5,4 +5,9 @@
         <attr name="text" format="string" />
         <attr name="axisColor" format="color" />
     </declare-styleable>
+
+
+    <declare-styleable name="LineView">
+        <attr name="lineAxisColor" format="color" />
+    </declare-styleable>
 </resources>
