--- a/charts-demo/app/src/main/res/values/colors.xml
+++ b/charts-demo/app/src/main/res/values/colors.xml
@@ -18,4 +18,9 @@
     <color name="panel_light_red">#E7DAC9</color>
     <color name="panel_blue">#5AB1EF</color>
     <color name="panel_light_green">#2EC7C9</color>
+
+
+
+    <!-- new line -->
+    <color name="new_line_red">#E2344A</color>
 </resources>
