--- a/charts-demo/app/src/main/res/layout/linechar_layout.xml
+++ b/charts-demo/app/src/main/res/layout/linechar_layout.xml
@@ -1,53 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:color="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:layout_height="match_parent">
 
 
-    <com.chartsdemo.views.LineView
-        android:id="@+id/lineView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <com.chartsdemo.views.LineChartView
+        android:id="@+id/line_view"
+        android:layout_width="1200px"
+        android:layout_height="700px"
+        android:background="@color/panel_blue"/>
 
 
-    <!--<com.chartsdemo.views.LineChartsView-->
-        <!--android:id="@+id/linechartview"-->
-        <!--android:layout_width="300dp"-->
-        <!--android:layout_height="300dp"-->
-        <!--color:axisColor="#DFDFDF"/>-->
-
-
-
-
-    <!--<Button-->
-        <!--android:id="@+id/btn1"-->
-        <!--android:layout_width="100dp"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:text="add"-->
-        <!--android:layout_alignParentBottom="true" />-->
-
-    <!--<EditText-->
-        <!--android:id="@+id/ynum"-->
-        <!--android:layout_width="100dp"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:layout_above="@id/btn1"-->
-        <!--android:inputType="number"-->
-        <!--android:maxLength="3"-->
-        <!--android:hint="y value" />-->
-
-    <!--<EditText-->
-        <!--android:id="@+id/xnum"-->
-        <!--android:layout_width="100dp"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:layout_above="@id/btn1"-->
-        <!--android:layout_toRightOf="@id/ynum"-->
-        <!--android:layout_marginLeft="10dp"-->
-        <!--android:maxLength="3"-->
-        <!--android:hint="x value" />-->
 </RelativeLayout>
