--- a/charts-demo/app/src/main/res/layout/linechar_layout.xml
+++ b/charts-demo/app/src/main/res/layout/linechar_layout.xml
@@ -7,8 +7,7 @@
     <com.chartsdemo.views.LineChartView
         android:id="@+id/line_view"
         android:layout_width="1200px"
-        android:layout_height="700px"
-        android:background="@color/panel_blue"/>
+        android:layout_height="700px" />
 
 
 </RelativeLayout>
