--- a/charts-demo/app/src/main/res/layout/linechar_layout.xml
+++ b/charts-demo/app/src/main/res/layout/linechar_layout.xml
@@ -6,8 +6,8 @@
 
     <com.chartsdemo.views.LineChartView
         android:id="@+id/line_view"
-        android:layout_width="1200px"
-        android:layout_height="700px" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
 </RelativeLayout>
